SFO-4855 Fix left alignment of th in IE

--- a/less/components/responsive-table.less
+++ b/less/components/responsive-table.less
@@ -35,6 +35,7 @@
     > tbody > tr > th,
     > tfoot > tr > th {
         &:extend(.ffe-strong-text);
+        text-align: left;
     }
 
     > tbody > tr > td,
